--- a/.travis.yml
+++ b/.travis.yml
@@ -11,16 +11,6 @@ matrix:
             - g++-7
       env:
         - MATRIX_EVAL="CXX=g++-7"
-    - os: linux
-      dist: xenial
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-          packages:
-            - g++-8
-      env:
-         - MATRIX_EVAL="CXX=g++-8"
 before_install:
   - eval "${MATRIX_EVAL}"
 script:
@@ -28,3 +18,5 @@ script:
   - cd build
   - cmake ..
   - cmake --build .
+  - ctest --verbose
+  - make install
