add stack queue & matrixgraph
Signed-off-by: biobots <biobot94@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ include_directories(ds)
 add_executable(stack test/stacktest.cpp)
 add_executable(queue test/queuetest.cpp)
 add_executable(btree test/btreetest.cpp)
+add_executable(graph test/graphtest.cpp)
 
 SET(CMAKE_INSTALL_PREFIX .)
 
@@ -15,6 +16,7 @@ enable_testing()
 ADD_TEST(NAME QueueTests COMMAND queue -s)
 ADD_TEST(NAME StackTests COMMAND stack -s)
 ADD_TEST(NAME BinaryTreeTests COMMAND btree -s)
+ADD_TEST(NAME GraphTests COMMAND graph -s)
 
-install(TARGETS queue stack btree
+install(TARGETS queue stack btree graph
         RUNTIME DESTINATION bin)
